# pretix-sumup-payment

./: pyproject.toml
pretix_sumup/: payment.py
pretix_sumup/locale/de/LC_MESSAGES/: django.po
pretix_sumup/locale/de_Informal/LC_MESSAGES/: django.po
