[project]
name = "pretix-sumup-payment"
dynamic = ["version"]
description = "Enables credit card payments via SumUp"
readme = "README.rst"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["pretix"]
authors = [
    {name = "Christoph Walcher", email = "chris@wiomoc.de"},
]
maintainers = [
    {name = "Christoph Walcher", email = "chris@wiomoc.de"},
]

dependencies = [
]

[project.entry-points."pretix.plugin"]
pretix_sumup = "pretix_sumup:PretixPluginMeta"

# CHANGE THIS:
[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project.urls]
homepage = "https://github.com/wiomoc/pretix-sumup-payment"
repository = "https://github.com/wiomoc/pretix-sumup-payment"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_sumup.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
